modeltraining almost completed

--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -522,6 +522,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " There is another way to separate the numeric and object data\n",
+    "\n",
+    " categorical_column=X.select_dtypes(include=\"object\").columns\n",
+    "\n",
+    "numerical_column=X.select_dtypes(exclude=\"object\").columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 153,
    "metadata": {},
@@ -1306,10 +1317,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.to_csv(\"cleaned_data.csv\",index=False)"
+   ]
   }
  ],
  "metadata": {
